Removed biased locking for integration tests.